# 3dvr-decentralized-notes

./: README.md  index.html  style.css
notes_blockchain/: Cargo.toml
notes_blockchain/src/: lib.rs
