[package]
name = "notes_blockchain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
aes = "0.7"
block-modes = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
libp2p = { version = "0.52", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
