[package]
name = "notes_blockchain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] } 
aes = { version = "0.7", default-features = false, features = ["alloc"] }
block-modes = { version = "0.8", default-features = false, features = ["alloc"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
js-sys = "0.3"
